force-app/main/default/objects/Finance_Request__c/Finance_Request__c.object-meta.xml
<CustomObject>
    <label>Finance Request</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Finance Request  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>