force-app/main/default/objects/Finance_Request__c/fields/AVP__c.field-meta.xml
<CustomField>
    <fullName>AVP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AVP Verified</label>
    <type>Checkbox</type>
</CustomField>