force-app/main/default/objects/Finance_Request__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bill To</label>
    <length>200</length>
    <type>Text</type>
</CustomField>