force-app/main/default/objects/Finance_Request__c/fields/Bill_To_Formula__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Formula__c</fullName>
    <formula>Health_Care_Facility__r.MDM_SAP_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To</label>
    <type>Text</type>
</CustomField>