force-app/main/default/objects/Finance_Request__c/fields/COC_Team_Number__c.field-meta.xml
<CustomField>
    <fullName>COC_Team_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>COC Team Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>