force-app/main/default/objects/Finance_Request__c/fields/Customer_Number_With_Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number_With_Ship_To__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Number With Ship To</label>
    <length>200</length>
    <type>Text</type>
</CustomField>