force-app/main/default/objects/Finance_Request__c/fields/Customer_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Customer_Purchase_Order__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Only one PO should be entered in this field. If you have multiple PO&apos;s then create multiple Entries</inlineHelpText>
    <label>Customer Purchase Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>