force-app/main/default/objects/Finance_Request__c/fields/Expected_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Invoice_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expected Invoice Date</label>
    <type>Date</type>
</CustomField>