force-app/main/default/objects/Finance_Request__c/fields/Health_Care_Facility__c.field-meta.xml
<CustomField>
    <fullName>Health_Care_Facility__c</fullName>
    <label>Health Care Facility</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Finance Requests</relationshipLabel>
    <relationshipName>Finance_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>