force-app/main/default/objects/Finance_Request__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Number</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>