force-app/main/default/objects/Finance_Request__c/fields/Invoice_Number_Known__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number_Known__c</fullName>
    <description>this is used if the invoice number is known</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Number (if Known)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>