force-app/main/default/objects/Finance_Request__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>