force-app/main/default/objects/Finance_Request__c/fields/Person_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Person_Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Finance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>