force-app/main/default/objects/Finance_Request__c/fields/Product_Brand__c.field-meta.xml
<CustomField>
    <fullName>Product_Brand__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>