force-app/main/default/objects/Finance_Request__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>