force-app/main/default/objects/Finance_Request__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Residency/Fellowship Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aaron A. Hofmann Adult Reconstruction Fellowship</fullName>
            </value>
            <value>
                <fullName>Allegheny Health Network Adult Reconstruction Fellowship</fullName>
            </value>
            <value>
                <fullName>Anderson Clinic Post-Graduate Medical Education Foundation Adult Reconstruction Fellowship</fullName>
            </value>
            <value>
                <fullName>Arthritis and Sports Adult Reconstruction Fellowship</fullName>
            </value>
            <value>
                <fullName>Baylor College of Medicine Adult Reconstruction Fellowship</fullName>
            </value>
            <value>
                <fullName>Baylor Scott &amp; White Medical Center Temple Adult Reconstruction Fellowship</fullName>
            </value>
            <value>
                <fullName>Beaumont Health Adult Reconstruction Fellowship</fullName>
            </value>
            <value>
                <fullName>Boston Medical Center Adult Reconstruction Fellowship</fullName>
            </value>
            <value>
                <fullName>Brigham &amp; Women&apos;s Hospital Total Joint Arthroplasty Fellowship</fullName>
            </value>
            <value>
                <fullName>BronxCare Health System Adult Reconstruction Hip, Knee, Shoulder Fellowship</fullName>
            </value>
            <value>
                <fullName>Brown University Adult Reconstruction Fellowship</fullName>
            </value>
            <value>
                <fullName>Carilion Clinic/Virginia Tech Carilion Adult Reconstruction Fellowship</fullName>
            </value>
            <value>
                <fullName>Cedars-Sinai Medical Center Joint Reconstruction and Preservation Fellowship</fullName>
            </value>
            <value>
                <fullName>Cleveland Clinic Florida (CCF) Adult Reconstruction Fellowship</fullName>
            </value>
            <value>
                <fullName>Cleveland Clinic James A. Dickson Fellowship in Adult Reconstructive Surgery</fullName>
            </value>
            <value>
                <fullName>Colorado Orthopaedic Research Institute 1-Year Clinical &amp; Research Adult Reconstruction Fellowship</fullName>
            </value>
            <value>
                <fullName>Columbia University Frank E. Stinchfield Adult Reconstruction Fellowship</fullName>
            </value>
            <value>
                <fullName>Dartmouth Orthopaedics Adult Reconstruction Fellowship</fullName>
            </value>
            <value>
                <fullName>Desert Orthopaedic Center Adult Reconstruction Fellowship</fullName>
            </value>
            <value>
                <fullName>Duke University Medical Center Adult Reconstruction Fellowship (ACGME-Accredited)</fullName>
            </value>
            <value>
                <fullName>Duke University Medical Center Adult Reconstruction Fellowship (Non-ACGME Accredited)</fullName>
            </value>
            <value>
                <fullName>Emory University Adult Reconstruction Fellowship</fullName>
            </value>
            <value>
                <fullName>Florida Orthopaedic Institute Adult Reconstruction Fellowship</fullName>
            </value>
            <value>
                <fullName>Geisinger Medical Center Adult Reconstruction Fellowship</fullName>
            </value>
            <value>
                <fullName>Grand Rapids Adult Reconstruction &amp; Total Joint Fellowship</fullName>
            </value>
            <value>
                <fullName>Hedley Orthopaedic Institute Adult Reconstruction Fellowship</fullName>
            </value>
            <value>
                <fullName>Hip And Knee Institute at Cape Cod Orthopaedics Adult Reconstruction Fellowship</fullName>
            </value>
            <value>
                <fullName>Hoag Orthopedic Institute Adult Reconstruction Fellowship</fullName>
            </value>
            <value>
                <fullName>Holy Cross Orthopedic Institute Adult Reconstruction Fellowship</fullName>
            </value>
            <value>
                <fullName>Hospital for Special Surgery Adult Reconstruction and Joint Replacement Fellowship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>