force-app/main/default/objects/Finance_Request__c/fields/Reasons_for_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Conversion__c</fullName>
    <label>Reasons for Conversion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitive Opportunity</fullName>
            </value>
            <value>
                <fullName>Increase Hip Share With ZB Hip Surgeon</fullName>
            </value>
            <value>
                <fullName>Reduce Risk of Competitive Threats</fullName>
            </value>
            <value>
                <fullName>Current Surgeon Requesting Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>