force-app/main/default/objects/Finance_Request__c/fields/ResidentFellow_Name__c.field-meta.xml
<CustomField>
    <fullName>ResidentFellow_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resident/Fellow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>