force-app/main/default/objects/Finance_Request__c/fields/ROSA_Purchase__c.field-meta.xml
<CustomField>
    <fullName>ROSA_Purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ROSA Purchase (Cash / DRA / ID)</label>
    <type>Checkbox</type>
</CustomField>