force-app/main/default/objects/Finance_Request__c/fields/TeamId__c.field-meta.xml
<CustomField>
    <fullName>TeamId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TeamId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>