force-app/main/default/objects/Finance_Request__c/fields/Territory_Id__c.field-meta.xml
<CustomField>
    <fullName>Territory_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Territory Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>