force-app/main/default/objects/Finance_Request__c/fields/Total_Closed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed_Amount__c</fullName>
    <label>Predicted Bulk Buy Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>