force-app/main/default/objects/Finance_Request__c/recordTypes/Bulk_Buy.recordType-meta.xml
<RecordType>
    <fullName>Bulk_Buy</fullName>
    <active>true</active>
    <label>COC</label>
</RecordType>