force-app/main/default/objects/Finance_Request__c/recordTypes/Bulk_Buy2.recordType-meta.xml
<RecordType>
    <fullName>Bulk_Buy2</fullName>
    <active>true</active>
    <label>Bulk Buy</label>
</RecordType>