force-app/main/default/objects/Finance_Request__c/recordTypes/NON_COC.recordType-meta.xml
<RecordType>
    <fullName>NON_COC</fullName>
    <active>true</active>
    <label>NON COC</label>
</RecordType>